--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -48,6 +48,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  box-shadow: 0px 4px 8px 0px #00000040;
 }
 .button1,
 .button2,
