--- a/src/components/sspecialCategorie/sspecialCategorie.css
+++ b/src/components/sspecialCategorie/sspecialCategorie.css
@@ -139,7 +139,7 @@
 }
 .name,
 .ingredient {
-  font-family: PoppinsBold;
+  font-family: "PoppinsBold";
   font-size: 30px;
   font-weight: 700;
   line-height: 45px;
