--- a/src/menuEdit/sider/sider.css
+++ b/src/menuEdit/sider/sider.css
@@ -3,6 +3,9 @@
   width: 352px;
   height: 100vh;
 }
+.principalDishParagraph {
+  margin-right: 10px;
+}
 .editText {
   width: 352px;
   height: 60px;
